--- a/details.html
+++ b/details.html
@@ -133,8 +133,7 @@
             placeholder="Search for Movies, Events, Plays"
           />
           <button class="btn btn-outline-light" type="submit" style="border-radius: 50px;">Search</button>
-        </form>
-        <div class="dropdown" style="border-radius: 25px;">
+              <div class="dropdown mx-2" style="border-radius: 25px;">
           <a style="border-radius: 25px;" class="btn btn-outline-light dropdown-toggle p-2" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
             Category
           </a>
@@ -148,6 +147,8 @@
             <li><a class="dropdown-item" href="#">Activities</a></li>
           </ul>
         </div>
+        </form>
+    
       </div>
     </div>
   </nav>
