--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               placeholder="Search for Movies, Events, Plays"
             />
             <button class="btn btn-outline-light" type="submit" style="border-radius: 50px;">Search</button>
-             <div class="dropdown" style="border-radius: 25px;">
+             <div class="dropdown m-2" style="border-radius: 25px;">
             <a style="border-radius: 25px;" class="btn btn-outline-light dropdown-toggle p-2" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
               Category
             </a>
